--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,44 @@
-*{
+* {
   margin: 0;
   padding: 0;
-  box-sizing: border-box  ;
+  box-sizing: border-box;
 }
 
-.App {
-  
+.clubs-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
+.clubs-card {
+  width: 30%;
+  height: 300px;
+  background-color: lightgray;
+  margin-bottom: 20px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  overflow: hidden;
+}
 
+.clubs-card-header {
+  background-color: darkgray;
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+.clubs-card-header h3 {
+  margin: 0;
+  font-size: 20px;
+}
+
+.clubs-card-body {
+  padding: 20px;
+}
+
+.clubs-card-body p {
+  font-size: 14px;
+  line-height: 1.5;
+  margin: 0;
+}
